[21599] DocumentDocHandle support VirtualFilesystemService